tests/bad/frontend/inheritenceCycle.latte
int main() {return 0;}

// class A extends A {}

class A extends B {}
class B extends A {}

